Minor fixes for mobile
Fixed landing page transition on mobile to completely cover the screen instead of missing a small amount
Fixed minor spacing issues on landing page
Fixed subtitle and header text on work pages being wrong size

--- a/app/src/scss/_partials/base.scss
+++ b/app/src/scss/_partials/base.scss
@@ -109,6 +109,10 @@ ol>li{
 	padding-left: 0.5rem;
 	margin-bottom: 0.75rem;
 }
+
+li>a{
+	font-weight: bold;
+}
 /* hidden elements */
 .vis-hide{
 	position: absolute;
