--- a/app/src/scss/_partials/landing-large.scss
+++ b/app/src/scss/_partials/landing-large.scss
@@ -3,8 +3,8 @@
     padding-top: 10rem;
     padding-bottom: 4rem;
   }
-  .display .work-item{
-    width:49.5%;
+  .landing-work_item{
+    margin-bottom: 3rem;
   }
   .landing-work_item:nth-child(2n) {
     margin-top: 6rem;
