--- a/app/src/scss/_partials/landing.scss
+++ b/app/src/scss/_partials/landing.scss
@@ -22,7 +22,7 @@
 
 .landing-work_item{
 	position: relative;
-	margin-bottom: 3rem;
+	margin-bottom: 6rem;
 	z-index: 2;
 }
 .landing-work_content{
